--- a/pom.xml
+++ b/pom.xml
@@ -35,13 +35,13 @@
         <version>${hadoopVersion}</version>
     </dependency>
     <!-- Hadoop -->
-    <dependency>
-        <groupId>jdk.tools</groupId>
-        <artifactId>jdk.tools</artifactId>
-        <version>1.8</version>
-        <scope>system</scope>
-        <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
-    </dependency>
+<!--    <dependency>-->
+<!--        <groupId>jdk.tools</groupId>-->
+<!--        <artifactId>jdk.tools</artifactId>-->
+<!--        <version>1.8</version>-->
+<!--        <scope>system</scope>-->
+<!--        <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>-->
+<!--    </dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
