commit about java.tools delete it in pom.xml and add maven-compiler-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 <!--        <artifactId>jdk.tools</artifactId>-->
 <!--        <version>1.8</version>-->
 <!--        <scope>system</scope>-->
-<!--        <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>-->
+<!--&lt;!&ndash;        <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>&ndash;&gt;-->
 <!--    </dependency>-->
         <dependency>
             <groupId>junit</groupId>
@@ -49,5 +49,17 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 
 </project>
