--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,26 @@
         <version>${hadoopVersion}</version>
     </dependency>
     <!-- Hadoop -->
+    <!-- hbase -->
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>2.1.7</version>
+        </dependency>
+<!--        windows本地运行时报错，缺少以下jar包-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.htrace</groupId>-->
+<!--            <artifactId>htrace-core4</artifactId>-->
+<!--            <version>4.0.1-incubating</version>-->
+<!--        </dependency>-->
+
+        <!-- hbase -->
 <!--    <dependency>-->
 <!--        <groupId>jdk.tools</groupId>-->
 <!--        <artifactId>jdk.tools</artifactId>-->
 <!--        <version>1.8</version>-->
 <!--        <scope>system</scope>-->
-<!--&lt;!&ndash;        <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>&ndash;&gt;-->
+<!--        <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>&ndash;&gt;-->
 <!--    </dependency>-->
         <dependency>
             <groupId>junit</groupId>
