--- a/pom.xml
+++ b/pom.xml
@@ -36,12 +36,24 @@
     </dependency>
     <!-- Hadoop -->
     <!-- hbase -->
-        <dependency>
-            <groupId>org.apache.hbase</groupId>
-            <artifactId>hbase-client</artifactId>
-            <version>2.1.7</version>
-        </dependency>
-<!--        windows本地运行时报错，缺少以下jar包-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.hbase</groupId>-->
+<!--            <artifactId>hbase-client</artifactId>-->
+<!--            <version>2.1.5</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.hbase</groupId>-->
+<!--            <artifactId>hbase</artifactId>-->
+<!--            <version>2.1.5</version>-->
+<!--            <type>pom</type>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.hbase</groupId>-->
+<!--            <artifactId>hbase-common</artifactId>-->
+<!--            <version>2.1.5</version>-->
+<!--        </dependency>-->
+
+        <!--        windows本地运行时报错，缺少以下jar包-->
 <!--        <dependency>-->
 <!--            <groupId>org.apache.htrace</groupId>-->
 <!--            <artifactId>htrace-core4</artifactId>-->
