--- a/pom.xml
+++ b/pom.xml
@@ -7,83 +7,29 @@
     <groupId>com.xjc</groupId>
     <artifactId>learn</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>spring</module>
+        <module>hadoop</module>
+        <module>nio</module>
+    </modules>
 
-    <properties>
-        <hadoopVersion>3.2.4</hadoopVersion>
-        <JAVA_HOME>D:/Program/Java/jdk1.8.0_172</JAVA_HOME>
-    </properties>
     <dependencies>
-    <!-- Hadoop start -->
-    <dependency>
-        <groupId>org.apache.hadoop</groupId>
-        <artifactId>hadoop-common</artifactId>
-        <version>${hadoopVersion}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.hadoop</groupId>
-        <artifactId>hadoop-hdfs</artifactId>
-        <version>${hadoopVersion}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.hadoop</groupId>
-        <artifactId>hadoop-mapreduce-client-core</artifactId>
-        <version>${hadoopVersion}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.hadoop</groupId>
-        <artifactId>hadoop-client</artifactId>
-        <version>${hadoopVersion}</version>
-    </dependency>
-    <!-- Hadoop -->
-    <!-- hbase -->
 <!--        <dependency>-->
-<!--            <groupId>org.apache.hbase</groupId>-->
-<!--            <artifactId>hbase-client</artifactId>-->
-<!--            <version>2.1.5</version>-->
+<!--            <groupId>org.postgresql</groupId>-->
+<!--            <artifactId>postgresql</artifactId>-->
+<!--            <version>42.6.0</version>-->
 <!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.hbase</groupId>-->
-<!--            <artifactId>hbase</artifactId>-->
-<!--            <version>2.1.5</version>-->
-<!--            <type>pom</type>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.hbase</groupId>-->
-<!--            <artifactId>hbase-common</artifactId>-->
-<!--            <version>2.1.5</version>-->
-<!--        </dependency>-->
-
-        <!--        windows本地运行时报错，缺少以下jar包-->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.htrace</groupId>-->
-<!--            <artifactId>htrace-core4</artifactId>-->
-<!--            <version>4.0.1-incubating</version>-->
-<!--        </dependency>-->
-
-        <!-- hbase -->
-<!--    <dependency>-->
-<!--        <groupId>jdk.tools</groupId>-->
-<!--        <artifactId>jdk.tools</artifactId>-->
-<!--        <version>1.8</version>-->
-<!--        <scope>system</scope>-->
-<!--        <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>&ndash;&gt;-->
-<!--    </dependency>-->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
-        </dependency>
     </dependencies>
-<build>
-    <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-                <source>1.8</source>
-                <target>1.8</target>
-            </configuration>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
         </plugin>
     </plugins>
 </build>
