--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>leetcode</module>
         <module>DesignPatterns</module>
         <module>designPatterns</module>
+        <module>java</module>
     </modules>
 
     <dependencies>
@@ -27,11 +28,6 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.28</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-net</groupId>
-            <artifactId>commons-net</artifactId>
-            <version>3.9.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
